--- a/index.html
+++ b/index.html
@@ -15,30 +15,35 @@
     </section>
     <section class="todo-list">
         <div class="container">
-            <h3>to do list</h3>
-            <div class="itens">
-                <ul>
-                    <li>
-                        <img src="assets/filled.svg" alt="Filled">
-                        <span>Item 1</span>
-                    </li>
-                    <li>
-                        <img src="assets/not-filled.svg" alt="Filled">
-                        <span>Item 1</span>
-                    </li>
-                    <li>
-                        <img src="assets/not-filled.svg" alt="Filled">
-                        <span>Item 1</span>
-                    </li>
-                    <li>
-                        <img src="assets/filled.svg" alt="Filled">
-                        <span>Item 1</span>
-                    </li>
-                </ul>
+            <div>
+                <h3>to do list</h3>
+                <div class="itens">
+                    <ul>
+                        <li>
+                            <img src="assets/filled.svg" alt="Filled">
+                            <span>Item 1</span>
+                        </li>
+                        <li>
+                            <img src="assets/not-filled.svg" alt="Filled">
+                            <span>Item 1</span>
+                        </li>
+                        <li>
+                            <img src="assets/not-filled.svg" alt="Filled">
+                            <span>Item 1</span>
+                        </li>
+                        <li>
+                            <img src="assets/filled.svg" alt="Filled">
+                            <span>Item 1</span>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <button>
-                <img src="assets/more-icon.svg" alt="">
-            </button>
+            <footer>
+                <input type="text" name="todo" id="todo" placeholder="Type your task for today">
+                <button>
+                    <img src="assets/more-icon.svg" alt="">
+                </button>
+            </footer>
         </div>
     </section>
 </body>
