Creating complete task function

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    
     <title>Document</title>
 </head>
 <body>
@@ -18,33 +19,17 @@
             <div>
                 <h3>to do list</h3>
                 <div class="itens">
-                    <ul>
-                        <li>
-                            <img src="assets/filled.svg" alt="Filled">
-                            <span>Item 1</span>
-                        </li>
-                        <li>
-                            <img src="assets/not-filled.svg" alt="Filled">
-                            <span>Item 1</span>
-                        </li>
-                        <li>
-                            <img src="assets/not-filled.svg" alt="Filled">
-                            <span>Item 1</span>
-                        </li>
-                        <li>
-                            <img src="assets/filled.svg" alt="Filled">
-                            <span>Item 1</span>
-                        </li>
-                    </ul>
+                    <ul></ul>
                 </div>
             </div>
             <footer>
-                <input type="text" name="todo" id="todo" placeholder="Type your task for today">
-                <button>
+                <input type="text" data-input name="todo" id="todo" placeholder="Type your task for today">
+                <button data-button type="submit">
                     <img src="assets/more-icon.svg" alt="">
                 </button>
             </footer>
         </div>
     </section>
+    <script src="js/main.js"></script>
 </body>
 </html>
