--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
             </footer>
         </div>
     </section>
-    <script src="js/main.js"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
