Creating spam dynamically

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="welcome">
         <h3>Hi, Giovanna.</h3>
         <h2>What are your <br/>plans for today?</h2>
-        <span>Monday, 11 aug.</span>
+        <span></span>
     </section>
     <section class="todo-list">
         <div class="container">
